refactor: decouple api module from core via interfaces, NMS SPI and Pre/Post events