@@ -48,7 +48,7 @@ public class GUIListener implements Listener {
         if (list == null || list.isEmpty()) {
             return null;
         }
-        return list.get(0);
+        return list.getFirst();
     }
 
     @EventHandler
